# My-learning-repo

./: .gitignore  .vimrc  Makefile  README.md
Sem1/: Цифровая грамотность.odt
Sem1/AIP/1 crows/: K1_Ребдев_ПА_5130904_30008.odt
Sem1/AIP/2 chess/: Figure.cpp  К2_Ребдев_ПА_5130904_30008.odt
Sem1/AIP/3 power of two/: main.cpp  К3_Ребдев_ПА_5130904_30008.odt
Sem1/AIP/4/: digitInNumber.hpp  main.cpp  К4_Ребдев_ПА_5130904_30008.odt
Sem1/AIP/5 permutation/: arrayFunction.hpp  main.cpp  К5_РЕБДЕВ_ПА_5130904_30008.odt
Sem1/AIP/6 getNumberOfOrderedRows/: matrixFunction.cpp  matrixFunction.hpp  К6_РЕБДЕВ_ПА_5130904_30008.odt
Sem1/AIP/OOP1/: pointFunction.cpp  КО1_РЕБДЕВ_ПА_5130904_30008.odt
Sem1/AIP/OOP2/: Point.cpp  Point.h  pointFunction.hpp  КО2_РЕБДЕВ_ПА_5130904_30008.odt
Sem1/AIP/OOP3/: cat.cpp  cat.hpp  dog.cpp  familyPets.cpp  main.cpp  КО3_РЕБДЕВ_ПА_5130904_30008.odt
Sem1/AIP/OOP4/: String.cpp  String.h  main.cpp  КО4_РЕБДЕВ_ПА_5130904_30008.odt
Sem1/AIP/P1/: КР1_РЕБДЕВ_ПА_5130904_30008.odt
Sem1/AIP/P3/: КР3_РЕБДЕВ_ПА_5130904_30008.odt
Sem1/AIP/P4/: КР4_РЕБДЕВ_ПА_5130904_30008.odt
Sem1/AIP/T1/: КТ1_РЕБДЕВ_ПА_5130904_30008.odt
Sem1/CP/: MainApp.java  Skazki_30008_Rebdev_Pavel.odt  TestWindow.java  Window.java  data1.txt  lastLesson.java  main.java  someFile.java
Sem1/English/: EnglishMonolog.odt  осень 2023-2024 Monologue LANGUAGE — базовый уровень.docx  осень 2023-2024 Monologue LANGUAGE — базовый уровень.odt  осень 2023-2024 Monologue PERSONALITY — базовый уровень.odt  осень 2023-2024 Monologue WORK — базовый уровень.odt  осень 2023-2024 Vocabulary LANGUAGE.docx  осень 2023-2024 Монолог TRAVEL - базовый уровень.odt
Sem1/GNULinuxLab/: Rebdev Pavel.odt
Sem1/PhysLab/: 04.ods  11.ods
Sem1/econom/: text.odt  Без имени 2.odt
Sem2/AiSD/: Критерии_АиСД_2024.xlsx
Sem2/English/: 5.odt  7.odt  essay1.odt  lesson1.txt  lesson2.txt  presentation_text.txt  tab.ods  весна 2023-2024  Monologue on EDUCATION.odt  весна 2023-2024 Monologue  Design.docx  весна 2023-2024 Monologue advertising — базовый уровень.odt  весна 2023-2024 Monologue on BUSINESS.odt  весна 2023-2024 Vocabulary Advertising.odt  весна 2023-2024 Vocabulary DESIGN.docx
Sem2/Math/: Math.ods
Sem2/Other/: History.odt  Resume_Rebdev_Pavel_5130904_30008.odt
Sem3/Computer acrhitector/: HW.odt
Sem3/English/: осень 2024-2025 Monologue ENGINEERING.odt
Sem3/Java/: Makefile  firstTask.java  secondTask.java  thirdTask.java
Sem3/Math/: Systems of linear differential equations.odt
Sem4/: summer_practice_5130904_30008_Rebdev_Pavel.docx  summer_practice_5130904_30008_Rebdev_Pavel_only_titul.docx
Sem5/Architecture_of_software_systems/: README.md
Sem5/DataBase/CourseWork/: CMakeLists.txt  config.ini
Sem5/DataBase/CourseWork/src/: AuthManager.cpp  AuthManager.h  ConfigManager.cpp  DatabaseManager.cpp  DatabaseManager.h  GoodsDialog.cpp  LoginDialog.cpp  MainWindow.cpp  MainWindow.h  ReportGenerator.cpp  ReportGenerator.h  ReportViewerDialog.cpp  ReportViewerDialog.h  SalesDialog.cpp  main.cpp
Sem5/Databases/: LABS_V3 (2).docx
Sem5/SoftSysArch/: README.md
(+703 files in other folders)
